--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,12 @@ server:
   error:
     include-stacktrace: always
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/anime?useSSL=false
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+
