--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/anime?useSSL=false
+    url: jdbc:mysql://localhost:3306/anime
     username: root
     password: root
   jpa:
